# model-checker

./: .gitignore  Algorithm.cpp  Algorithm.h  CMakeLists.txt  Formulae.cpp  Formulae.h  LTS.cpp  LTS.h  Parser.cpp  Parser.h  main.cpp
testcases/boolean/: form3.mcf  form4.mcf  form5.mcf  form6.mcf  form7.mcf  form8.mcf  form9.mcf
testcases/combined/: form1.mcf  form2.mcf  form3.mcf  form4.mcf  form5.mcf
testcases/fixpoints_only/: form1.mcf  form2.mcf  form3.mcf  form4.mcf  form5.mcf  test.aut
testcases/modal_operators/: form1.mcf  form2.mcf  form3.mcf  form4.mcf  form5.mcf  verdicts.txt
